--- a/Depo/Depo/Presentation/UserStories/Others/OnlyOfficePopUp/OnlyOfficePopup.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/OnlyOfficePopUp/OnlyOfficePopup.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,12 +20,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" ambiguous="YES" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="393" height="351"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IiB-55-UUb">
-                    <rect key="frame" x="28" y="16" width="337" height="35"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IiB-55-UUb">
+                    <rect key="frame" x="28" y="-18" width="337" height="35"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="45x-ru-pv0"/>
                     </constraints>
@@ -33,15 +33,15 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WrB-za-aVO">
-                    <rect key="frame" x="166.66666666666666" y="71" width="60" height="60"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WrB-za-aVO">
+                    <rect key="frame" x="166.66666666666666" y="37" width="60" height="60"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="Pcy-ma-nTC"/>
                         <constraint firstAttribute="height" constant="60" id="vNc-Um-O4Z"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDF-al-tVP">
-                    <rect key="frame" x="20" y="281" width="353" height="45"/>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDF-al-tVP">
+                    <rect key="frame" x="20" y="247" width="353" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="Ciu-P1-Ddl"/>
                     </constraints>
@@ -51,8 +51,8 @@
                         <action selector="actionOkButton:" destination="-1" eventType="touchUpInside" id="MfK-lr-ceC"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-hd-ZLP">
-                    <rect key="frame" x="20" y="221" width="353" height="45"/>
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fyk-hd-ZLP">
+                    <rect key="frame" x="20" y="187" width="353" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="f9j-zd-qSD"/>
                     </constraints>
@@ -62,18 +62,18 @@
                         <action selector="actionCancelButton:" destination="-1" eventType="touchUpInside" id="mSk-wG-XQD"/>
                     </connections>
                 </button>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ety-cT-kip">
-                    <rect key="frame" x="20" y="156" width="312" height="45"/>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ety-cT-kip">
+                    <rect key="frame" x="20" y="122" width="300" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="Xvc-5w-P0T"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=".ppt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HmQ-9Z-b1U">
-                    <rect key="frame" x="342" y="168" width="31" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text=".pptx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HmQ-9Z-b1U">
+                    <rect key="frame" x="330" y="134" width="43" height="21"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="31" id="dra-y4-Fh4"/>
+                        <constraint firstAttribute="width" constant="43" id="dra-y4-Fh4"/>
                         <constraint firstAttribute="height" constant="21" id="q5f-9o-FQ4"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
